--- a/templates/education.html
+++ b/templates/education.html
@@ -1,30 +1,86 @@
 {% extends 'base.html' %}
-{% load static %}
 {% block content %}
-    <div class="rounded m-3 fs-6" style="background: #f5c2c7">
-   <div class="rounded m-3 fs-6" style="background: #f5c2c7">
-        <div class="d-flex pt-3 bd-highlight">
-            <div class="p-2 bg-warning flex-fill text-white" style="background: #0dcaf0 ">
-             <h2><i class="fa-solid fa-user-hair-long"></i>ประวัติการศึกษา</h2>
-            </div>
-        </div>
-<div class="m-2 pt-2">
-            <img src="{% static 'images/222.jpg.' %}" class="rounded float-end img-thumbnail border border-info" alt="mypic" width="180">
+{% load static %}
+<head>
+    <meta charset="UTF-8">
+    <title>education page</title>
+     <style>
+body {
+  background-image: url('{%static 'images/P1.jpg..'  %}');
+}
+</style>
 
-            <b>
-                <br>
-                - จบการศึกษาชั้นประถมศึกษาปีที่ 6 ที่โรงเรียนบ้านไผ่ประถมศึกษา<br>
-                - จบการศึกษาชั้นมัธยมศึกษาปีที่ 3 ที่โรงเรียนเทศบาลบ้านไผ่<br>
-                - จบการศึกษาระดับประกาศนียบัตรวิชาชีพชั้นปีที่ 3 ที่วิทยาลัยการอาชีพขอนแก่น <br>
-                - จบการศึกษาระดับประกาศนียบัตรวิชาชีพชั้นสูงชั้นปีที่ 2 ที่วิทยาลัยการอาชีพขอนแก่น <br>
-                - ปัจจุบันกำลังศึกษาที่มหาวิทยาลัยเทคโนโลราชมงคลอีสาน วิทยาเขตขอนแก่น<br>
-                  ระดับปริญญาตรีชั้นปีที่ 3<br>
-            </b> <br>
-          </div>
+</head>
 
-         </div>
+<br>
+<body >
+<img src="{% static 'images/222.jpg.' %}"width="120px"height="150px"align="left">
+<img src="{% static 'images/123.jpg' %}"width="120px"height="150px"align="right">
+<div align="center"><strong><font style="font-family: 'TH KoHo';color: white;background-color:pink;border-style: dotted;border-color:lightyellow; "size="20"> My Education</font> </strong></div><br>
+<br>
 
-        </div>
-    </div>
-    </div>
+    <table style="color: dimgrey; border-width: 3px; border-style: solid;border-color:#4d5154;background-color: papayawhip;"class="text-bg-dark "border="2px"align="center" >
+        <tr bgcolor="#ffc0cb"td align="center"style="color: lightyellow;border-width: 3px;border-color: #51585e;" >
+
+        <th width="15%"  >ระดับการศึกษา</th>
+        <th width="40%" >สถานที่การศึกษา</th>
+        <th width="15%" >อำเภอ</th>
+        <th width="15%" >จังหวัด</th>
+
+
+    </tr>
+        <tr>
+        <td align="center">ชั้นประถมศึกษาปีที่1-6</td>
+        <td align="center">โรงเรียนบ้านไผ่ประถมศึกษา</td>
+        <td align="center">บ้านไผ่</td>
+        <td align="center">ขอนแก่น</td>
+
+    </tr>
+
+        </tr>
+        <tr>
+        <td align="center">ชั้นมัธยมศึกษาปีที่1-3</td>
+        <td align="center">โรงเรียนเทศบาลบ้านไผ่</td>
+        <td align="center">บ้านไผ่</td>
+        <td align="center">ขอนแก่น</td>
+
+    </tr>
+        <tr>
+        <td align="center">ระดับปวช.1-3</td>
+        <td align="center">วิทยาลัยการอาชีพขอนแก่น</td>
+        <td align="center">อำเภอชนบท</td>
+        <td align="center">ขอนแก่น</td>
+
+    </tr>
+
+         <tr>
+        <td align="center">ระดับปวส.1-2</td>
+        <td align="center">วิทยาลั ยการอาชีพขอนแก่น</td>
+        <td align="center">อำเภอชนบท</td>
+        <td align="center">ขอนแก่น</td>
+    </tr>
+
+         <tr>
+        <td align="center">ระดับปริญญาตรี</td>
+        <td align="center">มหาวิทยาลัยเทคโนโลยีราชมงคลอีสาน</td>
+        <td align="center">อำเภอเมือง</td>
+        <td align="center">ขอนแก่น</td>
+
+    </tr>
+ </table> <br>
+
+    <table>
+        <tr>
+            <td><marquee  direction ="left" ><img src="{% static 'images/n1.jpg' %}"width="250" height="300"></marquee> </td>
+            <td><marquee  direction ="left" ><img src="{% static 'images/n2.jpg' %}"width="300" height="300"></marquee> </td>
+            <td><marquee  direction ="left" ><img src="{% static 'images/n3.jpg' %}"width="300" height="300"></marquee> </td>
+        </tr>
+    </table>
+    <br>
+
+ </button></div><br>
+
+
+
+</body>
 {% endblock %}
