--- a/templates/header.html
+++ b/templates/header.html
@@ -1,12 +1,42 @@
 {% load static %}
 <div class="row">
-    <div class="col-lg-2" style="background: papayawhip;">
-        <img src="{% static 'images/main.png' %}" class="rounded-circle" width="200" height="200">
-{#    <div class="col-lg-10 bg-gradient">#}
-{#        #}
-{#    </div>#}
-    <div class="col-lg-10">
-        <h1 class="text-white text-center"style="font-size: 40px;"align="center">My web page'S</h1>
+    <div class="col-lg-2">
+        <meta charset="UTF-8">
+    <title>Idol Page</title>
+    <style>
+        body{background-image: url("{%static 'images/P1.jpg'  %}")}
+    </style>
+
+        <img src="{% static 'images/555.jpg.' %}"class="img-thumbnail" alt="Cinque Terre"
+        width="120px" height="120px">
     </div>
-</div>
+    <div class="col-lg-7">
+     <strong><h1 class="text-white display-3"style="font-family: 'TH KoHo'" align="center">My Webpage BIS3R1-050</h1> </strong>
+{#        <img src="{% static 'images/ff.gif' %}"width="70"height="70"align="right">#}
+    </div><br>
+{#    <nav class="navbar navbar-expand-sm navbar-dark bg-dark ">#}
+{#  <div class="container-fluid">#}
+{#    <a class="navbar-brand" href="javascript:void(0)">Logo</a>#}
+{#    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">#}
+{#      <span class="navbar-toggler-icon"></span>#}
+{#    </button>#}
+{#    <div class="collapse navbar-collapse" id="mynavbar">#}
+{#      <ul class="navbar-nav me-auto">#}
+{#        <li class="nav-item">#}
+{#          <a class="nav-link" href="javascript:void(0)">Link</a>#}
+{#        </li>#}
+{#        <li class="nav-item">#}
+{#          <a class="nav-link" href="javascript:void(0)">Link</a>#}
+{#        </li>#}
+{#        <li class="nav-item">#}
+{#          <a class="nav-link" href="javascript:void(0)">Link</a>#}
+{#        </li>#}
+{#      </ul>#}
+{#      <form class="d-flex">#}
+{#        <input class="form-control me-2" type="text" placeholder="Search">#}
+{#        <button class="btn btn-primary" type="button">Search</button>#}
+{#      </form>#}
+{#    </div>#}
+{#  </div>#}
+{#</nav>#}
 </div>
