--- a/templates/menu.html
+++ b/templates/menu.html
@@ -6,6 +6,7 @@
     <li class="list-group-item"><a href="{% url 'sales' %}"> สินค้า  </a> </li>
     <li class="list-group-item"><a href="{% url 'rloe' %}"> บุคคลต้นแบบ  </a> </li>
     <li class="list-group-item"><a href="{% url 'interest' %}"> สิ่งที่สนใจ  </a> </li>
+      <li class="list-group-item"><a href="{% url 'showMyData' %}"> MyData  </a> </li>
 
 
 </ul>
