--- a/templates/myinfo.html
+++ b/templates/myinfo.html
@@ -1,32 +1,72 @@
 {% extends 'base.html' %}
-{% load static %}
 {% block content %}
-    <div class="rounded m-3 fs-6" style="background: #f5c2c7">
-        <div class="d-flex pt-3 bd-highlight">
-            <div class="p-2 bg-warning flex-fill text-white" style="background: #0dcaf0 ">
-             <h2><i class="fa-solid fa-user-hair-long"></i>ประวัติส่วนตัว</h2>
-            </div>
-        </div>
-        <div class="m-2 pt-2">
-            <img src="{% static 'images/123.jpg' %}" class="rounded float-end img-thumbnail border border-info" alt="mypic" width="300">
-         <div class="row pt-10">
-          <div class="col-lg-10">
-            <b>
-                - ชื่อ : นางสาวกัณทิมา ยุซิ ชื่อเล่น แนทตี้ อายุ 21 ปี<br>
-                     - เกิดวันที่ : 6 กันยายน 2544<br>
-                     - เชื้อชาติ : ไทย สัญชาติ : ไทย ศาสนา : พุทธ<br>
-                     - ที่อยู่ปัจจุบัน : 92 ม.7 บ้านดู่น้อย ตำบลโนนแดง อำเภอโนนศิลา จังหวัดขอนแก่น 40110<br>
-                     - เบอร์โทร : 0994742410<br>
-                     - อีเมล : kantima.yu@rmuit.ac.th<br>
-                     - สีที่ชอบ : สีชมพู,ฟ้า,แดง <br>
-                     - อาหารที่ชอบ : ส้มตำ,หมูกระทะ,ข้าวผัด<br>
-                     - คติประจำใจ : เรียนไม่เก่งแต่สัญญาว่าจะเรียนให้จบ
+{% load static %}
+<head>
+    <style >
+body {
+  background-image: url('{%static 'images/P1.jpg.'%}');
+}
+</style>
 
-            </b>
-          </div>
+</head>
 
-         </div>
+    <meta charset="UTF-8">
+    <title>profile page</title>
+</head>
+<body ></body>
 
-        </div>
-    </div>
+        <br>
+ <div align="center"><font size="18" style="color: lightpink; background-color:lightyellow " > 🅟🅡🅞🅕🅘🅛🅔 🅘🅝🅕🅞🅡🅜🅐🅣🅘🅞🅝</font>
+     </div> <br><br>
+
+
+<marquee  direction="left"scrollamount="10"width="100%">
+    <table border="2px" align="center" style="border-color: navajowhite; line-grid: match-parent ;border-width: 7px;border-style: dashed;"  >
+        <tr>
+            <td><img src="{% static 'images/n5.jpg.' %}"width="200px"height="220px"></td>
+            <td><img src="{% static 'images/n6.jpg' %}"width="200px"height="220px"></td>
+            <td><img src="{% static 'images/n7.jpg' %}"width="200px"height="220px"></td>
+            <td><img src="{% static 'images/n8.jpg' %}"width="200px"height="220px"></td>
+            <td><img src="{% static 'images/n9.jpg' %}"width="200px"height="220px"></td>
+            <td><img src="{% static 'images/n10.jpg.' %}"width="200px"height="220px"></td>
+            <td><img src="{% static 'images/n4.jpg.' %}"width="200px"height="220px"></td>
+        </tr>
+    </table>
+<br>
+</marquee>
+
+
+<table style="color: darksalmon;border-width: 3px;border-style: solid " align="center" bgcolor="#ffebcd"    >
+        <tr >
+
+            <td width="200" height="30"  ><font size="4"  color="#696969" style="font-family: sans-serif" > ชื่อ-นามสกุล </font></td>
+            <td ><font size="4" color="#696969" style="font-family: sans-serif"> นางสาวกัณทิมา ยุซิ </font></td>
+        </tr>
+    <tr>
+        <td ><font size="4"  color="#696969" style="font-family: sans-serif" > วันเกิด 🎂 </font></td>
+        <td ><font size="4" color="#696969" style="font-family: sans-serif"> 06-09-2001  21 ปี</font></td>
+    </tr>
+
+    <tr>
+        <td ><font size="4"  color="#696969" style="font-family: sans-serif" > ที่อยู่ 🏡</font></td>
+        <td ><font size="4" color="#696969" style="font-family: sans-serif"> บ้านดู่น้อย ต.โนนแดง อ.โนนศิลา จ.ขอนแก่น รหัสไปรษณี 40110</font></td>
+    </tr>
+
+        <tr>
+        <td ><font size="4"  color="#696969" style="font-family: sans-serif" > EMAIL 💌 </font></td>
+        <td ><font size="4" color="#696969" style="font-family: sans-serif">kantima.yu@RMUTI.AC.TH</font></td>
+    </tr>
+
+    <tr>
+        <td ><font size="4" color="#696969" style="font-family: sans-serif" >FACEBOOK </font></td>
+        <td ><font size="4" color="#696969" style="font-family: sans-serif">nat kantima yusi</font></td>
+    </tr>
+    </table>
+
+<br>
+ <div align="center"><strong style="border-width: 2px; color: #0a58ca"><font style="font-family: 'TH KoHo'; background-color: #e7f1ff ; text-align: center" size="12" color="#2f4f4f"  >
+     NICE TO MEET YOU </font><img src="{% static 'images/k1.jpg.' %}"width="80px"height="100px"> </strong></div>
+
+
+</body>
 {% endblock %}
