--- a/templates/rloe.html
+++ b/templates/rloe.html
@@ -1,29 +1,37 @@
 {% extends 'base.html' %}
-{% load static %}
 {% block content %}
-    <div class="rounded m-3 fs-6" style="background: #f5c2c7">
-   <d>บุคคลต้นแบบ</d><br>
-    <div class="m-2 pt-2">
-            <img src="{% static 'images/bb.jpg.' %}" class="rounded float-end img-thumbnail border border-info" alt="mypic" width="200" >
-            <img src="{% static 'images/cc.jpg.' %}" class="rounded float-end img-thumbnail border border-info" alt="mypic" width="200">
-            <img src="{% static 'images/aaa.jpg.' %}" class="rounded float-end img-thumbnail border border-info" alt="mypic" width="240" >
-            <img src="{% static 'images/744.jpg.' %}" class="rounded float-end img-thumbnail border border-info" alt="mypic" width="240" >
-            <img src="{% static 'images/ddd.jpg.' %}" class="rounded float-end img-thumbnail border border-info" alt="mypic" width="225" >
-         <div class="row pt-5">
-          <div class="col-lg-10">
-            <b>
+{% load static %}
+<head>
+    <meta charset="UTF-8">
+    <title>Idol Page</title>
+    <style>
+        body{background-image: url("{%static 'images/P1.jpg'  %}")}
+    </style>
+
+</head>
+<body>
+
+<div align="center"><strong><font style="font-family: 'TH KoHo';font-size: 50px;background-color: white;">MY IDOL </font> </strong></div><br>
+<div><strong><font style="font-family: 'TH KoHo';caret-color: #51585e;background-color: white;border-style: double;border-color: #eccccf;border-width: 3px;" size="25">สส.ดรธีรรัตน์ สำเร็จวาณิชย์</font> </strong></div><br>
+<table align="center" style="border-style: solid;border-color: #51585e;border-width: 5px;background-color: white" >
+        <tr>
+            <td><img src="{% static 'images/bb.jpg' %}"width="200px"height="250px"></td>
+            <td><img src="{% static 'images/cc.jpg' %}"width="200px"height="250px"></td>
+            <td><img src="{% static 'images/744.jpg' %}"width="200px"height="250px"></td>
+            <td><img src="{% static 'images/aaa.jpg' %}"width="200px"height="250px"></td>
+
+           >
+        </tr>
+    </table><br><br>
+<div align="center"><strong><font style="font-family: 'TH Sarabun New';font-size: 22px;color: black;background-color: snow;border-color: #51585e;">
                 นักการเมืองหญิง สส.ดรธีรรัตน์ สำเร็จวาณิชย์ (สส.อิ่ม) สมาชิกสภาผู้แทนราษฎรกรุงเทพมหานคร เขตลาดกระบัง พรรคเพื่อไทย
                 สสอิ่มเป็น สส.สมัยที่2 เป็นคนที่ขยันทำงานและเป็นคนที่เก่งมากๆ เป็นคนปฏิบัติหน้าที่อยู่เสมอไม่ว่าจะเป็นงานในสภาหรืองานนอกสภาก็จะเต็มที่
-                กับงานอยู่ตลอดและมักจะได้ยินคำชมจากพี่น้องชาวลาดกระบังอยู่เสมอ พี่อิ่มเป็นน่ารักอบอุ่น พี่อิ่มคือต้นแบบในทุกๆอย่างของตัวแนทพี่อิ่มเป็นเหมือนกำลังใจในหลายๆด้าน
-                เวลาเหนื่อยจากการเรียนพอได้มาชมคลิปน่ารักๆของพี่อิ่มก็จะทำให้เรายิ้มได้ พี่อิ่มคือสิ่งที่ฮีลใจหนูได้มากๆ
+                กับงานอยู่ตลอดและมักจะได้ยินคำชมจากพี่น้องชาวลาดกระบังอยู่เสมอ พี่อิ่มเป็นน่ารักอบอุ่น พี่อิ่มคือต้นแบบในทุกๆอย่างของตัวแนทพี่อิ่มเป็น
+                เหมือนกำลังใจในหลายๆด้าน เวลาเหนื่อยจากการเรียนพอได้มาชมคลิปน่ารักๆของพี่อิ่มก็จะทำให้เรายิ้มได้ พี่อิ่มคือสิ่งที่ฮีลใจหนูได้มากๆ
 
-
-
-            </b>
-          </div>
-
-         </div>
-</img>
-        </div>
-    </div>
+    </font></strong></div><br><br>
+{#<div align="center"><video src="{% static 'mp4/The Space EP.31 พูดคุยกับ “นัท นิสามณี เลิศวรพงศ์”บิวตี้บล็อคเกอร์ชื่อดัง (LGBTQ+).mp4'  %}"width="400" height="300" controls="controls" loop autoplay style="border-color: #51585e;border-width: 3px"></video> </div>#}
+<br>
+ </button></div><br>
+</body>
 {% endblock %}
