--- a/templates/education.html
+++ b/templates/education.html
@@ -14,7 +14,7 @@ body {
 
 <br>
 <body >
-<img src="{% static 'images/222.jpg.' %}"width="120px"height="150px"align="left">
+<img src="{% static 'images/123.jpg' %}"width="120px"height="150px"align="right">
 <img src="{% static 'images/123.jpg' %}"width="120px"height="150px"align="right">
 <div align="center"><strong><font style="font-family: 'TH KoHo';color: white;background-color:pink;border-style: dotted;border-color:lightyellow; "size="20"> My Education</font> </strong></div><br>
 <br>
