--- a/templates/header.html
+++ b/templates/header.html
@@ -7,7 +7,7 @@
         body{background-image: url("{%static 'images/P1.jpg'  %}")}
     </style>
 
-        <img src="{% static 'images/555.jpg.' %}"class="img-thumbnail" alt="Cinque Terre"
+        <img src="{% static 'images/555.jpg' %}"class="img-thumbnail" alt="Cinque Terre"
         width="120px" height="120px">
     </div>
     <div class="col-lg-7">
