--- a/templates/education.html
+++ b/templates/education.html
@@ -6,7 +6,7 @@
     <title>education page</title>
      <style>
 body {
-  background-image: url('{%static 'images/P1.jpg..'  %}');
+  background-image: url('{%static 'images/P1.jpg'  %}');
 }
 </style>
 
