--- a/templates/myinfo.html
+++ b/templates/myinfo.html
@@ -63,7 +63,7 @@ body {
 
 <br>
  <div align="center"><strong style="border-width: 2px; color: #0a58ca"><font style="font-family: 'TH KoHo'; background-color: #e7f1ff ; text-align: center" size="12" color="#2f4f4f"  >
-     NICE TO MEET YOU </font><img src="{% static 'images/k1.jpg.' %}"width="80px"height="100px"> </strong></div>
+     NICE TO MEET YOU </font><img src="{% static 'images/123.jpg' %}"width="80px"height="100px"> </strong></div>
 
 
 </body>
