--- a/templates/myinfo.html
+++ b/templates/myinfo.html
@@ -4,7 +4,7 @@
 <head>
     <style >
 body {
-  background-image: url('{%static 'images/P1.jpg.'%}');
+  background-image: url('{%static 'images/P1.jpg'%}');
 }
 </style>
 
