--- a/templates/base.html
+++ b/templates/base.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-     <link type="text/css" rel="stylesheet"
-          href={% static 'bt523/css/bootstrap.css' %}>
-    <SCRIPT SRC ='{% static 'bt523/js/bootstrap.js' %}'></script>
-    <script src="https://kit.fontawesome.com/d886166b4a.js" crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" type="text/css" href="{% static 'fontawsome5/css/all.css' %}">
+    <script src="{% static 'fontawsome5/js/all.min.js' %}"></script>
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <style>@import url('https://fonts.googleapis.com/css2?family=Mitr&display=swap');</style>
     <style>@import url('https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap');</style>
 </head>
