--- a/templates/showmydata.html
+++ b/templates/showmydata.html
@@ -14,7 +14,7 @@
    <div class="rounded m-3 fs-6" style="background: #f5c2c7; height: 100%">
    <div class="d-flex pt-3 bd-highlight">
             <div class="p-2 bg-danger flex-fill text-white" style="font-family:'Yellowtail', cursive;">
-             <h2><img src="{% static 'images/555.jpg.' %}" alt="com" width="75px" > Show My Data</h2>
+             <h2><img src="{% static 'images/555.jpg' %}" alt="com" width="75px" > Show My Data</h2>
             </div>
         </div>
       <div class="row p-2">
