--- a/templates/menu.html
+++ b/templates/menu.html
@@ -8,6 +8,8 @@
     <li class="list-group-item"><a href="{% url 'interest' %}"> สิ่งที่สนใจ  </a> </li>
     <li class="list-group-item"><a href="{% url 'showmydata' %}"> showMyData  </a> </li>
     <li class="list-group-item"><a href="{% url 'listProduct' %}"> listProduct  </a> </li>
+    <li class="list-group-item"><a href="{% url 'goodslist' %}"> Lab12-Goods  </a> </li>
+    <li class="list-group-item"><a href="{% url 'customerList' %}"> Lab12-Customer  </a> </li>
 
 
 </ul>
